data/derived/fa15/progs/unify/prog1699.ml.out
Characters 80-82:
  List.fold_left f base xs;;
                        ^^
Error: This expression has type int but an expression was expected of type
         'a list
